--- a/src/Books.css
+++ b/src/Books.css
@@ -12,6 +12,7 @@
     width: 200px;
     cursor: pointer;
     transition: transform 0.2s;
+    background-color: azure;
   }
   
   .book-card:hover {
